[tool.poetry]
name = "twit"
version = "0.1.0"
description = ""
authors = ["Merry Cimakasky <mkcimakasky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tweepy = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
